# system-specifications

./: CMakeLists.txt  README.md  RUN.bat  SystemSpecs.cpp  logo.txt
headers/: DiskInfo.h  FileReader.h  GraphicsCardInfo.h  MemoryInfo.h  MotherboardInfo.h  ProcessorInfo.h  SetConsoleColor.h
